[package]
name = "bootloader"
version = "0.9.8"
authors = [
    "Матвей Т <https://github.com/AtomicGamer9523>"
]
license = "MIT"
description = "An experimental kernel and bootloader written in Rust"
repository = "https://github.com/AtomicGamer9523/bootloader"
edition = "2018"
build = "build.rs"

[[bin]]
name = "bootloader"
required-features = ["binary"]

[dependencies.x86_64]
path = "../memutils/x86_64"
optional = true
default-features = false
features = [
    "instructions",
    "inline_asm"
]

[dependencies.volatile]
path = "../memutils/volatile"
optional = true

[dependencies.bit_field]
path = "../memutils/bit_field"
optional = true

[dependencies]
xmas-elf = { version = "0.9", optional = true }
usize_conversions = { version = "0.2", optional = true }
fixedvec = { version = "0.2", optional = true }
rlibc = { version = "1.0", optional = true }

[dependencies.font8x8]
version = "0.3"
default-features = false
features = ["unicode"]
optional = true

[build-dependencies]
llvm-tools = { version = "0.1", optional = true }
toml = { version = "0.7", optional = true }

[features]
default = []
std3 = ["x86_64", "volatile", "bit_field"]
binary = ["xmas-elf", "x86_64", "usize_conversions", "fixedvec", "llvm-tools", "toml", "rlibc"]
vga_320x200 = ["font8x8"]
recursive_page_table = []
map_physical_memory = []
sse = ["bit_field"]

volatile = ["dep:volatile"]
x86_64 = ["dep:x86_64"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = false
debug = true #! DO NOT CHANGE THIS

[package.metadata.bootloader]
target = "x86_64-bootloader.json"
build-std = "core"

[package.metadata.docs.rs]
features = [ "recursive_page_table", "map_physical_memory" ]
default-target = "x86_64-unknown-linux-gnu"
